--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -274,92 +274,96 @@ background-color:#dddddd !important;
 				<!-- The Modal -->
 					<div id="myModal" class="modal">
 				<!-- Modal content -->
-				  <div class="modal-content">
+				  <div class="modal-content" style="width:35%;">
 				    <span id="span1" class="close">&times;</span>
 				    	<ul>
 				    		<li>Bronze tickets: 
 					    		<!-- Change the `data-field` of buttons and `name` of input field's for multiple plus minus buttons-->
-								<div class="input-group plus-minus-input">
-								  <div class="input-group-button">
-								    <button type="button" class="button hollow circle" data-quantity="minus1" data-field="quantity">
+								<div class="row">
+								  <!--<div class="col-sm-4 input-group-button">
+								    <button type="button" class="button hollow circle" style="width:15px;height:15px;" data-quantity="minus1" data-field="quantity">
 								      <i class="fa fa-minus" aria-hidden="true"></i>
 								    </button>
-								  </div>
-								  <input class="input-group-field" type="number" name="quantity" id="quantity" value="0">
-								  <div class="input-group-button">
+								  </div>-->
+								  <div class="col-sm-4"><input class="form-control" min=0 max=10 type="number" name="quantity" id="quantity" value="0" onchange="disableinputs();"></div>
+								  <!--<div class="col-sm-4 input-group-button">
 								    <button type="button" class="button hollow circle" data-quantity="plus1" data-field="quantity">
 								      <i class="fa fa-plus" aria-hidden="true"></i>
 								    </button>
-								  </div>
+								  </div>-->
+								
 								</div>
-				    		</li>
+				    		</li><br>
 				    		<li>Silver tickets: 
 				    		<!-- Change the `data-field` of buttons and `name` of input field's for multiple plus minus buttons-->
-								<div class="input-group plus-minus-input">
+								<div class="row">
+								<!--<div class="input-group plus-minus-input">
 								  <div class="input-group-button">
 								    <button type="button" class="button hollow circle" data-quantity="minus2" data-field="quantity2">
 								      <i class="fa fa-minus" aria-hidden="true"></i>
 								    </button>
-								  </div>
-								  <input class="input-group-field" type="number" name="quantity2" id="quantity2" value="0">
-								  <div class="input-group-button">
+								  </div>-->
+								  <div class="col-sm-4"><input class="form-control" min=0 max=10 type="number" name="quantity2" id="quantity2" value="0" onchange="disableinputs2();"></div>
+								  <!--<div class="input-group-button">
 								    <button type="button" class="button hollow circle" data-quantity="plus2" data-field="quantity2">
 								      <i class="fa fa-plus" aria-hidden="true"></i>
 								    </button>
 								  </div>
+								</div>-->
 								</div>
-				    		</li>
+				    		</li><br>
 				    		<li>Gold tickets: 
 				    		<!-- Change the `data-field` of buttons and `name` of input field's for multiple plus minus buttons-->
-								<div class="input-group plus-minus-input">
+									<div class="row">	
+								<!--<div class="input-group plus-minus-input">
 								  <div class="input-group-button">
 								    <button type="button" class="button hollow circle" data-quantity="minus3" data-field="quantity3">
 								      <i class="fa fa-minus" aria-hidden="true"></i>
 								    </button>
-								  </div>
-								  <input class="input-group-field" type="number" name="quantity3" id="quantity3" value="0">
-								  <div class="input-group-button">
+								  </div>-->
+								 <div class="col-sm-4"><input class="form-control" min=0 max=10 type="number" name="quantity3" id="quantity3" value="0" onchange="disableinputs3();"></div>
+								  <!--<div class="input-group-button">
 								    <button type="button" class="button hollow circle" data-quantity="plus3" data-field="quantity3">
 								      <i class="fa fa-plus" aria-hidden="true"></i>
 								    </button>
-								  </div>
+								  </div>-->
 								</div>
 				    		</li>
-				    	</ul>
-				    <button class="btn-block register_button" id="myBtn3"><h5>REGISTER<h5></button>
+				    	</ul><br>
+				    <button class="btn-block register_button" id="myBtn3"><h5>Proceed<h5></button>
 				   </div>
 			    	<!-- <!-- The Modal -->
 				 <div id="myModal2" class="modal">
 					Modal content
-					  <div class="modal-content">
-					    <span id="span2" class="close">&times;</span>
+					  <div class="modal-content" style="width:35%;">
+					    <span id="span2" class="close" onClick="closeall();">&times;</span>
 					    	<form action="/PaymentPortal" id="name_form">
 					    		<input id='event_name' name='event_name' type='hidden'>
 					    		<input id='bronze' name='bronze' type='hidden'>
 					    		<input id='silver' name='silver' type='hidden'>
 					    		<input id='gold' name='gold' type='hidden'>
-							  Attendee 1 Name:<br>
-							  <input type="text" name="name1" value="name1"><br>
-							  Attendee 2 Name:<br>
-							  <input type="text" name="name2" value="name2"><br>
-							  Attendee 3 Name:<br>
-							  <input type="text" name="name3" value="name3"><br>
-							  Attendee 4 Name:<br>
-							  <input type="text" name="name4" value="name4"><br>
-							  Attendee 5 Name:<br>
-							  <input type="text" name="name5" value="name5"><br>
-							  Attendee 6 Name:<br>
-							  <input type="text" name="name6" value="name6"><br>
-							  Attendee 7 Name:<br>
-							  <input type="text" name="name7" value="name7"><br>
-							  Attendee 8 Name:<br>
-							  <input type="text" name="name8" value="name8"><br>
-							  Attendee 9 Name:<br>
-							  <input type="text" name="name9" value="name9"><br>
-							  Attendee 10 Name:<br>
+							  Attendee 1 Name:&nbsp
+							  <input type="text" name="name1" value="name1"><br><br>
+							  Attendee 2 Name:&nbsp
+							  <input type="text" name="name2" value="name2"><br><br>
+							  Attendee 3 Name:&nbsp
+							  <input type="text" name="name3" value="name3"><br><br>
+							  Attendee 4 Name:&nbsp
+							  <input type="text" name="name4" value="name4"><br><br>
+							  Attendee 5 Name:&nbsp
+							  <input type="text" name="name5" value="name5"><br><br>
+							  Attendee 6 Name:&nbsp
+							  <input type="text" name="name6" value="name6"><br><br>
+							  Attendee 7 Name:&nbsp
+							  <input type="text" name="name7" value="name7"><br><br>
+							  Attendee 8 Name:&nbsp
+							  <input type="text" name="name8" value="name8"><br><br>
+							  Attendee 9 Name:&nbsp
+							  <input type="text" name="name9" value="name9"><br><br>
+							  Attendee 10 Name:&nbsp
 							  <input type="text" name="name10" value="name10"><br><br>
 							  <!-- <input type="submit" value="Submit"> -->
-							  <button class="btn-block register_button" onClick="NewPage()"><h5>REGISTER<h5></button> 
+							  <button class="btn-block register_button" onClick="NewPage()"><h5>Proceed to Payment<h5></button> 
 							</form>
 			    			<!-- <button class="btn-block register_button" onClick="NewPage()"><h5>REGISTER<h5></button> -->
 		  				</div>
@@ -619,7 +623,11 @@ btn2.onclick = function() {
 	document.getElementById("gold").value = document.getElementById("quantity3").value;
 	}
     
-
+function closeall()
+{
+modal2.style.display="none";
+modal1.style.display="none";
+}
 // When the user clicks on <span> (x), close the modal
 span2.onclick = function() {
     modal2.style.display = "none";
@@ -630,6 +638,57 @@ span2.onclick = function() {
     if (event.target == modal2) {
         modal2.style.display = "none";
     }
+}
+
+function disableinputs()
+{
+if(document.getElementById("quantity").value>0)
+{
+document.getElementById("quantity2").disabled=true;
+document.getElementById("quantity3").disabled=true;
+document.getElementById("quantity2").value=0;
+document.getElementById("quantity3").value=0;
+}
+else
+{
+
+document.getElementById("quantity2").disabled=false;
+document.getElementById("quantity3").disabled=false;
+}
+}
+
+function disableinputs2()
+{
+if(document.getElementById("quantity2").value>0)
+{
+document.getElementById("quantity").disabled=true;
+document.getElementById("quantity3").disabled=true;
+document.getElementById("quantity").value=0;
+document.getElementById("quantity3").value=0;
+}
+else
+{
+
+document.getElementById("quantity").disabled=false;
+document.getElementById("quantity3").disabled=false;
+}
+}
+
+function disableinputs3()
+{
+if(document.getElementById("quantity3").value>0)
+{
+document.getElementById("quantity").disabled=true;
+document.getElementById("quantity2").disabled=true;
+document.getElementById("quantity").value=0;
+document.getElementById("quantity2").value=0;
+}
+else
+{
+
+document.getElementById("quantity").disabled=false;
+document.getElementById("quantity2").disabled=false;
+}
 }
 
 
