--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -42,7 +42,7 @@ function initMap() {
             position: results[0].geometry.location
         });
       } else {
-        alert('Geocode was not successful for the following reason: ' + status);
+       /*  alert('Geocode was not successful for the following reason: ' + status); */
       }
     });
   
