--- a/src/main/resources/templates/Search.html
+++ b/src/main/resources/templates/Search.html
@@ -360,8 +360,8 @@ for (var i = 0; i < btns.length; i++) {
 				
 				document.getElementById("result_data").innerHTML="";
 				var i;
-				alert(data.length);
-				alert(data[0].eventTitle);
+				/* alert(data.length); */
+				/* alert(data[0].eventTitle); */
 				for (i=0;i<data.length;i++)
 				{
 							
@@ -461,10 +461,10 @@ for (var i = 0; i < btns.length; i++) {
 				//document.getElementById("result_data").innerHTML="";
 				console.log('success',data);
 				
-											alert('success by name');
+											/* alert('success by name'); */
 		
 				var i;
-				alert(data.length);
+				/* alert(data.length); */
 				//alert(data[0].eventTitle);
 				for (i=0;i<data.length;i++)
 				{
