--- a/src/main/resources/templates/PaymentPortal.html
+++ b/src/main/resources/templates/PaymentPortal.html
@@ -5,7 +5,10 @@
 <head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	    <link rel="stylesheet" type="text/css" th:href="@{css/PaymentPortalStyle.css}">
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -13,20 +16,80 @@
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 		<script th:src="@{script/PaymentPortal.js}"></script>
+		
+		<style>
+		      .fa {
+padding-top:10px;
+  padding-right: 10px;
+  padding-left:10px;
+  padding-bottom:10px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+	color:white;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+		
+		  body, html, .container-fluid {
+     font-family: 'Oxygen', sans-serif;
+
+	 width:100%
+}
+		</style>
 </head>
 <body>
 
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-<div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
+	<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
 <div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
-<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
-<div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Login</h5></button></div>
+<div class="col-sm-5"></div>
+<div class="col-sm-2"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1">
+<form action="/">
+        <button class="btn-default xyz" id="profilebutton"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Profile</h5></button>
+    </form>
+	</div>
+<div class="col-sm-1">
+    <form action="/login">
+        <button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
+    </form>
+    <form action="/logout">
+        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
+    </form>
+	
 </div>
 </div>
-
-<div id="container">
+</div>
+<br><br>
+<div id="container" >
 <!--<div id="header">
 	
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
@@ -68,130 +131,47 @@
  		<div><h2>Choose your preferred method of payment:</h2></div>
 		<div id="paypal-button-container"></div></div></div>
 
-		
-		<div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
-<div class="row" style="background-color:;">
-	<div class="col-sm-4">
-	<div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Hoosier Events</h4></div></div>
+	<br><br>	
+<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:10%;height:auto;position:relative;background-color: !important;color:">
+<br><div class="row" style="background-color:;">
+	<!--<div class="col-sm-4">
+	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
 		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
 	<br>
-	</div>
-	<div class="col-sm-4 links" style="color:#AE0D0D;"><div class="row"><div class="col-sm-12"><h4>Useful Links</h4></div></div>
+	</div>-->
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="font-family: 'Oxygen', sans-serif;
+background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
 		
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Your Account</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">About us</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Help</a></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">Sitemap</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">About us</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">FAQs</a></h5></div></div>
 		<br>
 	</div>
 	
-	<div class="col-sm-4"><div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Contact Us</h4></div></div>
-				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="font-family: 'Oxygen', sans-serif;
+text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
 							<br>
 				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
 							<br>
-							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88 -->
 
+		<div class="row">
+		<div class="col-sm-4"></div>
 
+		<div class="col-sm-1" style="padding-right:25px;" ><a href="https://www.facebook.com/HoosierEvents" class="fa fa-facebook"></a></div>
+<div class="col-sm-1" style="padding-right:25px;"><a href="https://twitter.com/hoosierevents" class="fa fa-twitter"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="https://www.instagram.com/eventshoosier/" class="fa fa-instagram"></a></div>
+<div class="col-sm-4"></div>
+		</div>
 	</div>
 </div>
 </div>
-		<!-- 
-		<footer class="page-footer font-small unique-color-dark">
-		
-		    <div id="footertopbar">
-		      <div class="container">
-		
-		        <div class="row py-4 d-flex align-items-center">
-		
-		          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-		            <h6 class="mb-0">Get connected with us on social networks!</h6>
-		          </div>
-		
-		          <div class="col-md-6 col-lg-7 text-center text-md-right">
-		
-		            <a id="socialmedialink" href="#" class="fb-ic">
-		              <i class="fa fa-facebook white-text mr-4"> </i>
-		            </a>
-		            <a id="socialmedialink" href="#" class="tw-ic">
-		              <i class="fa fa-twitter white-text mr-4"> </i>
-		            </a>
-		            <a id="socialmedialink" href="#" class="gplus-ic">
-		              <i class="fa fa-google-plus white-text mr-4"> </i>
-		            </a>
-		            <a id="socialmedialink" href="#" class="li-ic">
-		              <i class="fa fa-linkedin white-text mr-4"> </i>
-		            </a>
-		            <a id="socialmedialink" href="#" class="ins-ic">
-		              <i class="fa fa-instagram white-text"> </i>
-		            </a>
-		
-		          </div>
-		
-		        </div>
-		
-		      </div>
-		    </div>
-		
-		    <div id="footer" class="container text-center text-md-left mt-5">
-		
-		      <div class="row mt-3">
-		
-		        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-		
-		          <h6 class="text-uppercase font-weight-bold">Hoosier Events</h6>
-		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		          <p> Lorem ipsum dolor sit amet, consectetur
-		            adipisicing elit.</p>
-		
-		        </div>
-		        <div  class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-		
-		          <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		          <p>
-		            <a href="#!">Your Account</a>
-		          </p>
-		          <p>
-		            <a href="#!">Organize an event</a>
-		          </p>
-		          <p>
-		            <a href="#!">About us</a>
-		          </p>
-		          <p>
-		            <a href="#!">Help</a>
-		          </p>
-		
-		        </div>
-		
-		 
-		        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-		
-		          <h6 class="text-uppercase font-weight-bold">Contact</h6>
-		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		          <p>
-		            <i class="fa fa-home mr-3"></i> Bloomington, IN 47408, US</p>
-		          <p>
-		            <i class="fa fa-envelope mr-3"></i> info@example.com</p>
-		          <p>
-		            <i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
-		          <p>
-		            <i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
-		
-		        </div>
-		
-		      </div>
-		
-		    </div>
-		    
-		
-		   
-		    <div class="footer-copyright text-center py-3">© 2018 Copyright:
-		      <a href="https://mdbootstrap.com/bootstrap-tutorial/"> HoosierEvents</a>
-		    </div>
-		    
-		
-		  </footer>
-		     -->
+
 
 </body>
 </html>
