--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -194,6 +194,25 @@ body, html, .container-fluid {
 
       
     </div>
+	<div id="announcement" class="tab-pane fade">
+	<div class="row">
+	<div class="col-sm-6"><h4 style="">Send Broadcast Message To</h4></div>
+
+	</div><br>
+	<div class="row">
+		<div class="col-sm-6">
+					    <label class="checkbox-inline">
+      <input type="checkbox" value="">Users
+    </label>
+    <label class="checkbox-inline">
+      <input type="checkbox" value="">Organisers
+    </label>
+	</div>
+	</div>
+	<textarea id="" rows="8" cols="80" 	style="resize:none;"></textarea><br><br>
+	<button class='btn-block' style='width:30%;background-color:white;color:darkslategrey;border:1px solid darkslategrey;'>Send Message</button>
+	</div>
+	
 	<div id="view_users" class="tab-pane fade">
       <h3>Registered Users</h3>
     </div>
