--- a/src/main/resources/templates/create_event.html
+++ b/src/main/resources/templates/create_event.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-  <script src="script/createEvent.js"></script>
+  <script src="../static/script/createEvent.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" th:href="@{css/create_event.css}">
+  <link rel="stylesheet" th:href="@{../static/css/create_event.css}">
   	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
+	    <link rel="stylesheet" type="text/css" th:href="@{../static/css/HomePageStyle.css}">
   <style>
   #event_host_button
   {
